--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,9 +4,10 @@ metadata:
   name: grafana
   description: Deployment of Grafana for KubeCon Demo
   # Example for optional annotations
-  # annotations:
-  #   github.com/project-slug: backstage/backstage
-  #   backstage.io/techdocs-ref: dir:.
+  annotations:
+    github.com/project-slug: backstage-kubecon-demo/grafana
+    backstage.io/kubernetes-id: grafana
+    backstage.io/techdocs-ref: dir:.
 spec:
   type: website
   owner: john@example.com
